<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_name">CommuniCare</string>
    <string name="brand_name">Brand Name</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="brand_description">Welcome!\nYou\'re now ready to use CommuniCare\nWorld\'s finest Nursing Enabler!</string>
    <string name="feedback_initialize">Initializing…</string>
    <string name="feedback_request">Requesting Permissions…</string>
    <string name="feedback_fail">Failed to Get Permissions…</string>
    <string name="feedback_shutdown">Shutting Down…</string>
    <string name="dialog_permission_title">SMS Permissions Required</string>
    <string name="dialog_permission_message">CommuniCare depends on SMS permissions to work. You can update your permission preferences on Settings->Apps and Notifications.</string>
    <string name="dialog_permission_confirm">Got It</string>
    <string name="home_alerts">Alerts</string>
    <string name="home_communicate">Assist</string>
    <string name="home_patients">Patients</string>
    <string name="patients_addpatient">Add Patient</string>
    <string name="location_home">Home</string>
    <string name="location_alerts">Alerts</string>
    <string name="location_patients">Patients</string>
    <string name="location_newpatient">New Patient</string>
    <string name="location_pain">Pain Location</string>
    <string name="location_category">Assist Category</string>
    <string name="location_watercloset">WC</string>
    <string name="location_pain_items">Pain</string>
    <string name="location_breath">Breathing Issues</string>
    <string name="content_back_arrow">Back Arrow</string>
    <string name="content_stack_menu">Stack Menu</string>
    <string name="content_pipe_divider">Pipe Divider</string>
    <string name="content_pain">Pain Category</string>
    <string name="content_breath">Breathing Issues Category</string>
    <string name="content_watercloset">WC Category</string>
    <string name="listitem_alert">Alert</string>
    <string name="listitem_description">requests assistance.</string>
    <string name="listitem_communicate">Assist</string>
    <string name="listitem_resolve">Resolve</string>
    <string name="listitem_interaction">Interaction:</string>
    <string name="listitem_remove">Remove</string>
    <string name="listitem_patient">Patient</string>
    <string name="listitem_name">Name:</string>
    <string name="listitem_number">Number:</string>
    <string name="hint_patient">Patient Name</string>
    <string name="hint_number">Device (Phone) Number</string>
    <string name="body_next">Next</string>
    <string name="body_turn">Turn Body</string>
    <string name="category_pain_en">Pain</string>
    <string name="category_pain_ee">Valu</string>
    <string name="category_breath_en">Breathing\nIssues</string>
    <string name="category_breath_ee">"Hingamis-\nprobleemid"</string>
    <string name="category_watercloset_ee">Vesivoodi</string>
    <string name="category_watercloset_en">WC</string>
    <string name="pain_dull_en">Dull Pain</string>
    <string name="pain_dull_ee">Tuim Valu</string>
    <string name="pain_sharp_en">Sharp Pain</string>
    <string name="pain_sharp_ee">Terav Valu</string>
    <string name="pain_burn_en">Burning\nSensation</string>
    <string name="pain_burn_ee">Põletustunne</string>
    <string name="pain_nolist_en">My Pain\nIs Not Listed</string>
    <string name="pain_nolist_ee">Minu Valu\nEi Ole Loetletud</string>
    <string name="breath_difficult_en">Breathing\nDifficulty</string>
    <string name="breath_difficult_ee">Hingamis-\nraskused</string>
    <string name="breath_throat_en">Throat Ache</string>
    <string name="breath_throat_ee">Kurguvalu</string>
    <string name="breath_burn_en">Burning\nSensation</string>
    <string name="breath_burn_ee">Põletustunne</string>
    <string name="watercloset_pee_en">I Need To Pee</string>
    <string name="watercloset_pee_ee">Ma Pean Pissima</string>
    <string name="watercloset_poop_en">I Need To Poop</string>
    <string name="watercloset_poop_ee">Ma Pean Kakama</string>
    <string name="watercloset_wash_en">I Need To\nWash My Hands</string>
    <string name="watercloset_wash_ee">Ma Pean\nKäed Pesema</string>
    <string name="watercloset_shower_en">I Need To\nTake A Shower</string>
    <string name="watercloset_shower_ee">Ma Pean\nDušši Võtma</string>
    <string name="dialog_remove_title">Remove Patient</string>
    <string name="dialog_remove_message">Are you sure? This action cannot be undone.</string>
    <string name="dialog_remove_confirm">Remove</string>
    <string name="dialog_remove_cancel">Cancel</string>
    <string name="dialog_resolve_title">Resolve Alert</string>
    <string name="dialog_resolve_message">Are you sure? This action cannot be undone.</string>
    <string name="dialog_resolve_confirm">Resolve</string>
    <string name="dialog_resolve_cancel">Cancel</string>
    <string name="notification_alertstatus">Alert Status</string>
</resources>