<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_addbed_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Activity.AddBedActivity" >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_addbed_navigation"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/ly_rectangle_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_addbed_back"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_addbed_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/location_newpatient"
            android:textAlignment="center"
            android:textColor="@color/primary_text_red"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_addbed_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_brand_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/edittext_addbed_name"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_patient"
        android:inputType="textPersonName"
        android:text="@null"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_addbed_navigation" />

    <EditText
        android:id="@+id/edittext_addbed_number"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_number"
        android:inputType="phone"
        android:text="@null"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_addbed_name" />

    <Button
        android:id="@+id/button_addbed_add"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ly_rounded_filled_cyan"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/patients_addpatient"
        android:textAlignment="center"
        android:textColor="@color/primary_text_beige"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_addbed_number" />

</android.support.constraint.ConstraintLayout>