<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_bed_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/textview_item_bed_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/listitem_name"
        android:textColor="@color/primary_accent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_item_bed_number"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/listitem_number"
        android:textColor="@color/primary_accent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_item_bed_name" />

    <TextView
        android:id="@+id/textview_item_bed_bed"
        app:layout_constraintStart_toEndOf="@+id/textview_item_bed_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:text="@null"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_item_bed_phone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:text="@null"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textview_item_bed_number"
        app:layout_constraintTop_toBottomOf="@+id/textview_item_bed_name" />

    <Button
        android:id="@+id/button_item_bed_remove"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ly_rounded_border_red"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/listitem_remove"
        android:textAlignment="center"
        android:textColor="@color/primary_text_red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_item_bed_number" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_body_footer"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_item_bed_remove">

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>