<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_splash_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Activity.SplashActivity">

    <TextView
        android:id="@+id/textview_splash_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/roboto"
        android:text="@null"
        android:textAlignment="center"
        android:textColor="@color/primary_accent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_splash_loading" />

    <ProgressBar
        android:id="@+id/progress_splash_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:fadeScrollbars="true"
        android:indeterminateDrawable="@drawable/ly_circular_progress"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_splash_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/roboto"
        android:text="@string/brand_description"
        android:textAlignment="center"
        android:textColor="@color/primary_text_cyan"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_splash_brand"
        android:layout_width="325dp"
        android:layout_height="135dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_splash_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/brand_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageview_splash_logo"
            app:srcCompat="@drawable/ic_brand_name" />

        <ImageView
            android:id="@+id/imageview_splash_logo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:contentDescription="@string/brand_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_brand_logo" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>